tests/baselines/reference/incrementOperatorWithEnumTypeInvalidOperations.errors.txt
==== tests/cases/compiler/incrementOperatorWithEnumTypeInvalidOperations.ts (20 errors) ====
    // ++ operator on enum type
    
    enum ENUM { };
    enum ENUM1 { 1, 2, "" };
    
    // enum type var
    var ResultIsNumber1 = ++ENUM;
                            ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber2 = ++ENUM1;
                            ~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    var ResultIsNumber3 = ENUM++;
                          ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber4 = ENUM1++;
                          ~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // enum type expressions
    var ResultIsNumber5 = ++(ENUM[1] + ENUM[2]);
                            ~~~~~~~~~~~~~~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber6 = (ENUM[1] + ENUM[2])++;
                          ~~~~~~~~~~~~~~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // miss assignment operator
    ++ENUM;
      ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
      ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++ENUM1;
      ~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
      ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    ENUM++;
    ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ENUM1++;
    ~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.